--- a/readme
+++ b/readme
@@ -10,6 +10,7 @@ npm install bcryptjs
 npm install session-file-store
 npm install nodemailer
 npm install googleapis
+ npm install node-fetch@2
 
 
 /*---Sequelize---*/
@@ -24,7 +25,7 @@ npm install xlsx
 
 Resumed --->
 npm init -y
-npm install express ejs method-override multer express-validator express-session bcryptjs sequelize-cli sequelize mysql2 exceljs read-excel-file session-file-store xlsx nodemailer googleapis
+npm install express ejs method-override multer express-validator express-session bcryptjs sequelize-cli sequelize mysql2 exceljs read-excel-file session-file-store xlsx nodemailer googleapis node-fetch@2
 
 To do actions Sequelize
 1. Create file .sequelizerc
